--- a/todo-list-front/index.html
+++ b/todo-list-front/index.html
@@ -60,8 +60,7 @@
                             <th>Tekst</th>
                             <th>Opis</th>
                             <th>Zavrseno</th>
-                            <th>...</th>
-                            <th>...</th>
+                            <th>Akcija</th>
                         </tr>
                     </thead>
                     <tbody id="tabela_svih_body" >
