Timer fixed. Made some changes on UI

--- a/todo-list-front/index.html
+++ b/todo-list-front/index.html
@@ -10,7 +10,7 @@
 <body>
     
     <div class="container">
-        <h2 class="text-center mt-3" >TO-DO lista</h2>
+        <p class="text-center mt-3 naslov" >TO-DO lista</p>
         <div class="row">
             <div class="col-4 offset-4">
                 <button class="btn btn-success btn-block mt-3 btn-sm" data-toggle="modal" data-target="#modal_dodavanje"> 
@@ -49,7 +49,7 @@
         </form>
 
         <div class="row mt-5">
-            <div class="col-12 table-responsive" id="table_wrapper">
+            <div class="col-12 table-responsive table-borderless" id="table_wrapper">
                 <div id="broj-zadataka">
 
                 </div>
