Small UI changes for modals

--- a/todo-list-front/index.html
+++ b/todo-list-front/index.html
@@ -94,7 +94,7 @@
                     <br>
                     <input class="form-control" type="date" name="datum" id="novi_zadatak_datum">
                     <br>
-                    <button class="btn btn-success btn-block">Dodaj novi</button>
+                    <button class="btn dugme-dodaj btn-block">Dodaj novi</button>
                 </form>
             </div>
             <div class="modal-footer">
@@ -125,7 +125,7 @@
                     <br>
                     <input class="form-control" type="date" name="datum" id="izmjena_datum">
                     <br>
-                    <button class="btn btn-success btn-block">Potvrdi</button>
+                    <button class="btn dugme-dodaj btn-block">Potvrdi</button>
                 </form>
             </div>
             <div class="modal-footer">
