Final touches.. xD

--- a/todo-list-front/index.html
+++ b/todo-list-front/index.html
@@ -43,7 +43,7 @@
                     </select>
                 </div>
                 <div class="col-3">
-                    <button onclick="ocistiPretragu()" class="btn dugme-ocisti btn-block">Ocisti pretragu</button>
+                    <button onclick="ocistiPretragu()" class="btn dugme-ocisti btn-block"><i class="fas fa-trash-alt"></i> Ocisti pretragu</button>
                 </div>
             </div>
         </form>
