--- a/todo-list-front/index.html
+++ b/todo-list-front/index.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TO-DO APP JS</title>
-    <link rel="stylesheet" href="./style.css">
+    <link href="light-style.css" rel="stylesheet" id="theme-link">
+<!--    <link rel="stylesheet" href="./style.css">-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" /></head>
 <body>
     
     <div class="container">
         <p class="text-center mt-3 naslov" >TO-DO lista</p>
+        <div class="d-flex justify-content-center">
+            <input type="checkbox" class="checkbox" id="chk" />
+            <label class="label" for="chk">
+                <i class="fas fa-moon"></i>
+                <i class="fas fa-sun"></i>
+                <div class="ball"></div>
+            </label>
+        </div>
         <div class="row">
             <div class="col-4 offset-4">
                 <button class="btn btn-block mt-3 btn-sm dugme-dodaj" data-toggle="modal" data-target="#modal_dodavanje">
@@ -81,7 +90,7 @@
         <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Dodavanje novog zadatka</h5>
+                <h5 class="modal-title">Dodavanje novog zadatka</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -136,8 +145,11 @@
         </div>
     </div>
 
+
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
     <script src="./app.js"></script>
 </body>
 </html>
+
