Fixed clear search button. Earlier it wasnt preventing default and on click page would refresh.

--- a/todo-list-front/index.html
+++ b/todo-list-front/index.html
@@ -52,7 +52,7 @@
                     </select>
                 </div>
                 <div class="col-3">
-                    <button onclick="ocistiPretragu()" class="btn dugme-ocisti btn-block"><i class="fas fa-trash-alt"></i> Ocisti pretragu</button>
+                    <button id="ocisti_pretragu" class="btn dugme-ocisti btn-block"><i class="fas fa-trash-alt"></i> Ocisti pretragu</button>
                 </div>
             </div>
         </form>
